Fix issue #35 and #34, and fix table font-size on small screens

--- a/css/info.css
+++ b/css/info.css
@@ -14,6 +14,10 @@
 	width: 100%;
 }
 
+.eduCodeBox {
+		display: none;
+}
+
 .box {
 	box-sizing: border-box;
 	padding: 10px 20px;
@@ -25,9 +29,15 @@
 
 .green-box {
 	background-color: var(--colorGreenHighlight);
-	color: var(--colorGreenHighlight);	
+	color: var(--colorGreenHighlight);
 }
 
 .box-text {
 	line-height: 35px;
+}
+
+@media (max-width: 900px) {
+	.eduCodeBox {
+		display: block;
+	}
 }
