--- a/css/table.css
+++ b/css/table.css
@@ -4,7 +4,7 @@ table {
 }
 
 .detaljer table:nth-child(1) {
-  font-size: 1.6vw;
+  font-size: 1.8vw;
 }
 
 .green-highlight {
@@ -106,11 +106,11 @@ td, th {
     white-space: normal;
     word-wrap: anywhere;
   }
-  
+
   .lastT thead {
     font-size: 14px;
   }
-  
+
   .historic-table tr {
     max-width: 10vw;
   }
@@ -118,27 +118,27 @@ td, th {
   .sammenligning tr{
     max-width: 18vw;
   }
-  
-  /* 
+
+  /*
   Overskrifter i tabellen
   */
   .sammenligning th:nth-child(1),
   .sammenligning td:nth-child(1),
   .historic-table td:nth-child(1) {
-    font-size: 12px;
+    font-size: 1.8vh;
   }
 
   .oversikt th {
     font-size: 2.5vw;
   }
-  
+
   .lastT td,
   .oversikt td,
   .historic-table td,
   .historic-table th,
   .sammenligning td,
   .sammenligning th {
-    font-size: 3vw;
+    font-size: 1.8vw;
   }
 
 }
